--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Oskar Sharipov
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Random blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/igoose1/igoose1.github.io/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
@@ -18,17 +18,17 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: oskar.sharipov@tuta.io
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: igoose1
   instagram:
   linkedin:
   pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  rss: rsa
+  twitter:
+  stackoverflow: users/6760569/%d0%9e%d1%81%d0%ba%d0%b0%d1%80-%d0%a8%d0%b0%d1%80%d0%b8%d0%bf%d0%be%d0%b2
+  youtube: channel/UCitS6Vl0ObSgOiQJA_CuFTw
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: igoose.me
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
