--- a/_config.yml
+++ b/_config.yml
@@ -15,16 +15,12 @@ footer-links:
   twitter:
   stackoverflow: users/6760569/%d0%9e%d1%81%d0%ba%d0%b0%d1%80-%d0%a8%d0%b0%d1%80%d0%b8%d0%bf%d0%be%d0%b2
   youtube: channel/UCitS6Vl0ObSgOiQJA_CuFTw
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  googleplus:
 
 disqus:
 google_analytics:
 url: igoose.me
 baseurl: ""
-
-#
-# !! You don't need to change any of the configuration flags below !!
-#
 
 permalink: /:title/
 
