Added diqsus comments

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ footer-links:
   youtube: channel/UCitS6Vl0ObSgOiQJA_CuFTw
   googleplus:
 
-disqus:
+disqus: igoose
 google_analytics: UA-120910880-1
 url: igoose.me
 baseurl: ""
