--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Oskar Sharipov
 description: Random blog
-avatar: https://raw.githubusercontent.com/igoose1/igoose1.github.io/master/images/jekyll-logo.png
+avatar: images/logo.png
 
 footer-links:
   dribbble:
