Edited logo href

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Oskar Sharipov
 description: Random blog
-avatar: images/logo.png
+avatar: https://github.com/igoose1/igoose1.github.io/raw/master/images/logo.png
 
 footer-links:
   dribbble:
