--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ footer-links:
   instagram:
   linkedin:
   pinterest:
-  rss: rsa
+  rss: rss
   twitter:
   stackoverflow: users/6760569/%d0%9e%d1%81%d0%ba%d0%b0%d1%80-%d0%a8%d0%b0%d1%80%d0%b8%d0%bf%d0%be%d0%b2
   youtube: channel/UCitS6Vl0ObSgOiQJA_CuFTw
