--- a/_config.yml
+++ b/_config.yml
@@ -3,19 +3,10 @@ description: Random blog
 avatar: https://github.com/igoose1/igoose1.github.io/raw/master/images/logo.png
 
 footer-links:
-  dribbble:
   email: oskar.sharipov@tuta.io
-  facebook:
-  flickr:
-  github: igoose1
-  instagram:
-  linkedin:
-  pinterest:
+  github: igoose1/igoose1.github.io
   rss: rss
-  twitter:
   stackoverflow: users/6760569/%d0%9e%d1%81%d0%ba%d0%b0%d1%80-%d0%a8%d0%b0%d1%80%d0%b8%d0%bf%d0%be%d0%b2
-  youtube: channel/UCitS6Vl0ObSgOiQJA_CuFTw
-  googleplus:
 
 disqus: igoose
 url: https://igoose.me
@@ -40,6 +31,7 @@ gems:
   - jemoji
 
 exclude:
+  - vendor
   - Gemfile
   - Gemfile.lock
   - LICENSE
